# 22-word-generator

./: .gitignore  .gitmodules  Cargo.toml  README.md
benches/: bench.json  my_benchmark.rs
data/: language_weight.json  recipe.json  result.json  super_words.json
export/: a.md  angol.md  arxentin.md  astreil.md  azerbadjan.md  baintiat.md  bangax.md  barat.md  belgiak.md  dek.md  des.md  ekwazor.md  erain.md  est.md  estaraix.md  eswatin.md  gaian.md  gig.md  hanguk.md  heks.md  hekt.md  hept.md  indonesi.md  istlant.md  italian.md  itiop.md  kabuverd.md  kanad.md  katar.md  kazakstan.md  kil.md  kuekt.md  li.md  meg.md  meksik.md  mikr.md  mil.md  misr.md  nan.md  nedalant.md  (+17 more)
export/dic/: aldjazair.md  andor.md  antigabarbud.md  at.md  bacitit.md  baniyen.md  bayuyan.md  bimat.md  cikarab.md  ckipar.md  dan.md  dewal.md  du.md  e.md  eks.md  elsalbazor.md  esperant.md  femt.md  fron.md  gabon.md  gambir.md  gan.md  giney.md  hayastan.md  i.md  irak.md  iran.md  kamer.md  kamerun.md  kampuk.md  kuek.md  lakaran.md  lased.md  libuk.md  libus.md  licuk.md  lojban.md  mapeb.md  monak.md  n.md  (+21 more)
src/: convert.rs  language.rs  lib.rs  loan.rs  main.rs  phoneme.rs  phonotactics.rs  recipe.rs  word_generator.rs
